# User-Management-RBAC-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  openapi.rs
src/config/: mod.rs
src/constants/: collections.rs  error_codes.rs  errors.rs  messages.rs  mod.rs  pagination.rs  roles.rs
src/errors/: mod.rs
src/handlers/: admin_handler.rs  auth_handler.rs  avatar_handler.rs  mod.rs  user_handler.rs
src/middleware/: auth_helpers.rs  auth_middleware.rs  mod.rs  rate_limiter.rs  request_ext.rs
src/models/: claims.rs  mod.rs  user.rs
src/models/requests/: auth.rs  mod.rs  user.rs
src/models/responses/: api.rs  mod.rs  pagination.rs  user.rs
src/repositories/: mod.rs  user_repository.rs
src/routes/: mod.rs
src/services/: auth_service.rs  avatar_service.rs  file_service.rs  mod.rs  token_blacklist.rs  user_service.rs
src/utils/: log_sanitizer.rs  mod.rs
src/validators/: common.rs  mod.rs  user.rs
