[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# MongoDB
mongodb = "2"
bson = { version = "2", features = ["chrono-0_4"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
futures = "0.3"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }