[package]
name = "user_management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.148"

# MongoDB
mongodb = "3.4.1"
bson = { version = "3.1.0", features = ["chrono-0_4"] }

# Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
futures = "0.3"
thiserror = "2.0.17"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.7.2"
tokio-util = "0.7.17"
regex = "1.12.2"
actix-files = "0.6.9"
actix-cors = "0.7"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
actix-governor = "0.10.0"
dashmap = "6.1.0"
